# dnscrypt-proxy-gui

./: .gitignore  CMakeLists.txt  Changelog  DNSCryptClient.desktop  DNSCryptClient.service  DNSCryptClient.socket  DNSCryptClient.spec  DNSCryptClient@.service  DNSCryptClient_test@.service  DNSCryptClient_test_v2.service  README.md  dnscrypt-proxy-gui-qt.spec  dnscrypt-proxy-gui.spec
src/: CMakeLists.txt  DNSCryptClient.notifyrc  app_settings.cpp  app_settings.h  button_panel.cpp  button_panel.h  click_label.cpp  click_label.h  dnscrypt_proxy_icons.qrc  enums.h  help_thread.cpp  help_thread.h  info_panel.cpp  info_panel.h  main.cpp  mainwindow.cpp  mainwindow.h  port_settings.cpp  port_settings.h  resolver_entries.cpp  resolver_entries.h  server_info.cpp  server_info.h  server_panel.cpp  server_panel.h  test_respond.cpp  test_respond.h  test_thread.cpp  test_thread.h  test_widget.cpp  test_widget.h
src/helper/: CMakeLists.txt  actions.actions  dns.c  dns.h  dnscrypt_client_helper.cpp  dnscrypt_client_helper.h
src/helpers/: CMakeLists.txt
src/helpers/dns_utility/: dns.c  dns.h
src/helpers/job_helper/: CMakeLists.txt  actions.actions  dnscrypt_client_helper.cpp  dnscrypt_client_helper.h
src/helpers/reload_helper/: CMakeLists.txt  actions.actions  dnscrypt_client_reload_helper.cpp  dnscrypt_client_reload_helper.h
src/helpers/test_helper/: CMakeLists.txt  actions.actions  dnscrypt_client_test_helper.cpp  dnscrypt_client_test_helper.h
src/icons/: License  index.theme
src/tray/: traywidget.cpp  traywidget.h
